--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@
     width:auto;
     text-align: right;
 }
+
+th h4{
+    font-size: 1.17rem;
+}
+
+td h4{
+    font-size: 1.2rem;
+}
+
+
 .card{
     margin:5px;
 }
