--- a/style.css
+++ b/style.css
@@ -20,3 +20,19 @@ td h4{
 .card-body {
     padding: .4rem .9rem;
 }
+
+.diffnum{
+    font-size:.9rem;
+    color: mediumspringgreen;
+}
+
+.hasdiff{
+    color: tomato;
+}
+
+.percentage{
+    text-align:left; 
+    padding-left:0!important; 
+    font-size:.8rem; 
+    vertical-align: inherit !important; 
+}
